# freepad-boot

./: .gitmodules  CMakeLists.txt  boot.overlay  prj.conf  tips.md
boards/arm/freepad_n52840/: Kconfig.board  Kconfig.defconfig  freepad_n52840.dts  freepad_n52840_defconfig
common/: firmware_info.h  flash_layout.h
src/: boot_info.c  clib_config.h  comm.c  comm.h  dfu.c  dfu.h  dfu_nrf.c  dfu_nrf.h  dfu_nrf52.c  dfu_nrf52.h  main.c  mmlib_config.h  sgp_cmd.h  sign_check.c  sign_check.h  usb_agent.c  usb_agent.h
